상점 설명 45자 내로 표시 아이템 디테일 페이지에 상점가기 버튼 생성 sns 아이콘 위치 변경

--- a/src/res/css/StoreUserSNSList.scss
+++ b/src/res/css/StoreUserSNSList.scss
@@ -18,6 +18,11 @@
     margin-left: 30px;
     background-color: rgba(0, 0, 0, 0);
   }
+
+  .sns_img_item_detail_container {
+    margin-bottom: 20px;
+    background-color: rgba(0, 0, 0, 0);
+  }
   @media (max-width: 520px){
     /*모바일일때*/
     // right: 24px;
@@ -30,6 +35,11 @@
 
     .sns_img_container {
       margin-left: 20px;
+    }
+
+    .sns_img_item_detail_container {
+      margin-bottom: 16px;
+      background-color: rgba(0, 0, 0, 0);
     }
   }
 }
