--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -9,13 +9,24 @@ $img_width: 520px;
   }
 
   .user_info_container {
+    // position: absolute;
+    // bottom: 0px;
+    // display: flex;
+    // justify-content: space-between;
+    // width: 100%;
+    // padding: 30px;
     position: absolute;
     bottom: 0px;
     display: flex;
     justify-content: space-between;
-    // align-items: center;
     width: 100%;
-    padding: 30px;
+    height: 100%;
+    padding: 25px;
+  }
+
+  .user_info_wrapper {
+    display: flex;
+    align-items: flex-end;
   }
 
   .user_img {
@@ -101,6 +112,24 @@ $img_width: 520px;
     color: #ffffff;
     opacity: 0.7;
   }
+
+  .button_go_store {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 56px;
+    border-radius: 12px;
+    border: solid 1px #cccccc;
+    background-color: #ffffff;
+    font-size: 18px;
+    font-weight: 500;
+    color: #000000;
+  }
+
+  .button_gap {
+    width: 15px;
+  }
   
 
   @media (max-width: 520px){
@@ -108,6 +137,10 @@ $img_width: 520px;
     padding-top: 0px;
     padding-bottom: 0px;
     
+    .user_info_container {
+      padding: 18px;
+    }
+
     .content_title{
       font-size: 18px;
       margin-bottom: 2px;
@@ -155,6 +188,10 @@ $img_width: 520px;
   
     .store_contents_content {
       font-size: 14px;
+    }
+
+    .button_gap {
+      width: 13px;
     }
   }
 }
