--- a/src/res/css/StoreManagerTabStoreInfoPage.scss
+++ b/src/res/css/StoreManagerTabStoreInfoPage.scss
@@ -117,6 +117,12 @@ $button_width: 35px;
     margin-top: 5px;
   }
 
+  .content_length_container {
+    text-align: right;
+    font-size: 12px;
+    color: #acacac;
+  }
+
   @media (max-width: 520px){
     /*모바일일때*/  
     padding-top: 0px;
