--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -130,6 +130,10 @@ $img_width: 520px;
   .button_gap {
     width: 15px;
   }
+
+  .item_state_disabled_text {
+    margin-bottom: 5px;
+  }
   
 
   @media (max-width: 520px){
