--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -131,8 +131,21 @@ $img_width: 520px;
     width: 15px;
   }
 
-  .item_state_disabled_text {
-    margin-bottom: 5px;
+  // .warning_notice_dom_container {
+  //   margin-bottom: 5px;
+  // }
+
+  .warning_notice_dom_container {
+    padding-left: 27px;
+    padding-right: 27px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    border-radius: 20px;
+    background-color: #ffffff;
+    margin-top: 20px;
+    font-size: 14px;
+    color: #333333;
   }
   
 
@@ -196,6 +209,14 @@ $img_width: 520px;
 
     .button_gap {
       width: 13px;
+    }
+
+    .warning_notice_dom_container {
+      margin-top: 0px;
+      padding-top: 0px;
+      padding-left: 10px;
+      padding-right: 10px;
+      font-size: 12px;
     }
   }
 }
