--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -147,6 +147,26 @@ $img_width: 520px;
     font-size: 14px;
     color: #333333;
   }
+
+  .reset_container {
+    width: 100%;
+    height: 56px;
+    background-color: rgba(191, 238, 255, 0.4);
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: bold;
+
+    margin-top: 15px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .reset_date_text {
+    margin-left: 5px;
+    color: #00bfff;
+  }
   
 
   @media (max-width: 520px){
@@ -213,10 +233,17 @@ $img_width: 520px;
 
     .warning_notice_dom_container {
       margin-top: 0px;
-      padding-top: 0px;
+      // padding-top: 0px;
       padding-left: 10px;
       padding-right: 10px;
       font-size: 12px;
+    }
+
+    .reset_container {
+      margin-top: 0px;
+      height: 40px;
+      font-size: 11px;
+      border-radius: 12px;
     }
   }
 }
