--- a/src/res/css/StoreHome.scss
+++ b/src/res/css/StoreHome.scss
@@ -22,7 +22,8 @@ $thumb_item_height: 95px;
     padding-right: 24px;
     padding-top: 17px;
     padding-bottom: 17px;
-    margin-top: 64px;
+    // margin-top: 64px;
+    margin-top: 40px;
   }
 
   .notice_icon {
@@ -43,7 +44,8 @@ $thumb_item_height: 95px;
 
   .shopThumbContainer {
     width: 100%;
-    margin-top: 40px;
+    // margin-top: 40px;
+    margin-top: 0px;
     overflow: hidden;
     padding-right: 0px;
   }
@@ -76,7 +78,7 @@ $thumb_item_height: 95px;
   }
 
   .contents_container {
-    margin-top: 35px;
+    margin-top: 40px;
   }
 
   .contents_list_title {
@@ -97,16 +99,32 @@ $thumb_item_height: 95px;
   .viewport{
     position: relative;
   }
+
+  .title_img_container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 66px;
+    margin-top: 35px;
+  }
+
+  .title_img {
+    width: 440px;
+  }
+
+  .conteint_mobile_full_size {
+
+  }
   
 
   @media (max-width: 520px){
     /*모바일일때*/
 
     .notice-bg {
-      margin-top: 0px;
+      margin-top: 32px;
     }
     .thumb_title_label {
-      display: none;
+      // display: none;
+      margin-bottom: 13px;
     }
 
     .shopThumbContainer {
@@ -118,11 +136,27 @@ $thumb_item_height: 95px;
     }
 
     .contents_list_title{
-      display: none;
+      // display: none;
+      margin-bottom: 6px;
+      padding-left: 10px;
     }
 
     .notice_content{
       font-size: 12px;
+    }
+
+    .title_img_container {
+      margin-top: 19px;
+      margin-bottom: 43px;
+    }
+
+    .title_img {
+      width: 100%
+    }
+
+    .conteint_mobile_full_size {
+      padding-left: 0px;
+      padding-right: 0px;
     }
   }
 }
