sns 이미지 둥글게 수정

--- a/src/res/css/StoreHomeStoreListItem.scss
+++ b/src/res/css/StoreHomeStoreListItem.scss
@@ -40,11 +40,13 @@
 
   .sns_img_button {
     // margin-right: 26px;
+    border-radius: 50px;
   }
 
   .sns_img {
     width: 24px;
     height: 24px;
+    border-radius: 50px;
   }
 
   .store_title {
