--- a/src/res/css/FileUploader.scss
+++ b/src/res/css/FileUploader.scss
@@ -1,5 +1,127 @@
 .FileUploader {
   
+  .file_uploader_container {
+    width: 100%;
+    margin-top: 32px;
+    display: flex;
+  }
+
+  .button_container {
+    width: 80px;
+    height: 80px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+
+    border-radius: 12px;
+    background-color: #f7f7f7;
+    margin-right: 8px;
+  }
+
+  .input_order_file_upload {
+    display: none;
+  }
+
+  .preview_box_container {
+    display: flex;
+    flex-direction: column;
+    margin-right: 8px;
+  }
+
+  .preview_box {
+    width: 80px;
+    height: 80px;
+    border-radius: 12px;
+    background-color: #f7f7f7;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .preview_img { 
+    width: 80px;
+    height: 80px;
+    border-radius: 12px;
+  }
+
+  .blur_thumb_cover {
+    width: 80px;
+    height: 100%;
+    background: linear-gradient(to left, #ffffff, rgba(255, 255, 255, 0) 100%);
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    pointer-events: none;
+  }
+
+  .viewport{
+    position: relative;
+    display: flex;
+  }
+
+  .viewport_container {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .file_icon_img_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .file_icon_img {
+    width: 38px;
+    height: 38px;
+  }
+
+  .file_name {
+    width: 60px;
+    font-size: 10px;
+    color: #4d4d4d;
+    margin-top: 2px;
+    text-align: center;
+    overflow:hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+  }
+
+  .circle_button {
+    margin-top: 5px;
+    width: 40px;
+    height: 30px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .download_text {
+    font-size: 12px;
+    color: #808080;
+    text-align: center;
+    margin-top: 5px;
+  }
+
+  .button_wrapper {
+
+  }
+
+  .file_count_text {
+    font-size: 12px;
+    color: #999999;
+    text-align: center;
+    margin-top: 5px;
+  }
+
+  .explain_text {
+    font-size: 10px;
+    color: #808080;
+    margin-top: 5px;
+    text-align: end;
+  }
+
   @media (max-width: 520px){
     /*모바일일때*/  
   }
