--- a/src/res/css/StoreAddItemPage.scss
+++ b/src/res/css/StoreAddItemPage.scss
@@ -174,6 +174,7 @@ $img_width: 100px;
     margin-top: 5px;
     font-size: 12px;
     color: #acacac;
+    margin-left: 35px;
   }
 
   @media (max-width: 520px){
