--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -49,6 +49,8 @@ $img_width: 520px;
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 68%, rgba(0, 0, 0, 0.5));
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
   }
 
   .content_container {
