--- a/src/res/css/Popup_text_viewer.scss
+++ b/src/res/css/Popup_text_viewer.scss
@@ -18,6 +18,7 @@
 
   .text_container {
     width: 100%;
+    font-size: 14px;
     max-width: 520px;
     height: 100%;
     padding: 20px;
@@ -47,5 +48,9 @@
     padding-bottom: 40px;
     padding-left: 10px;
     padding-right: 10px;
+
+    .text_container {
+      font-size: 16px;
+    }
   }
 }
