--- a/src/res/css/StoreContentConfirm.scss
+++ b/src/res/css/StoreContentConfirm.scss
@@ -140,6 +140,12 @@
     text-align: left;
   }
 
+  .product_show_text {
+    font-size: 12px;
+    color: #4d4d4d;
+    font-weight: bold;
+  }
+
   .product_title_text {
     font-weight: bold;
     font-size: 14px;
@@ -152,6 +158,14 @@
     white-space: nowrap; 
     overflow: hidden; 
     text-overflow: ellipsis;
+  }
+
+  .under_line {
+    width: 100%;
+    height: 1px;
+    background-color: #f4f4f4;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 
   @media (max-width: 520px){
