기획전 이벤트 임시 페이지

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,11 +16,18 @@
     width: 100%;
   }
 }
+@media (min-width:1030px) {
+  .container {
+    width:1030px;
+  }
+}
+/*
 @media (min-width:992px) {
   .container {
     width:1030px;
   }
 }
+*/
 @media (min-width:1200px) {
   .container {
     width:1030px;
