이벤트 기획전 기능 개발

--- a/src/res/css/EventPage.scss
+++ b/src/res/css/EventPage.scss
@@ -107,9 +107,9 @@
 
   .item_container {
     width: 49%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    // white-space: nowrap;
+    // overflow: hidden;
+    // text-overflow: ellipsis;
     text-align: left;
   }
 
