--- a/src/res/css/EventPage.scss
+++ b/src/res/css/EventPage.scss
@@ -1,5 +1,9 @@
+// @font-face {
+//   font-family: "jua";
+//   src: url("/fonts/BMJUA_ttf.ttf");
+// }
+
 .EventPage {
-  // padding-top: 64px;
   padding-bottom: 64px;
 
   width: 100%;
@@ -63,33 +67,6 @@
     // position: absolute;
     // height: 100%;
   }
-  /*
-  .layer_container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .EventStoreContainer {
-    // width: 520px;
-    width: 100%;
-    max-width: 520px;
-    margin-left: auto;
-    margin-right: auto;
-    position: absolute;
-  }
-
-  .layer_img {
-    width: 100%;
-  }
-
-  .background_img {
-    width: 100%;
-    height: 100%;
-  }
-  */
 
   .item_list_gap_dom {
     width: 10px;
@@ -111,6 +88,7 @@
     // overflow: hidden;
     // text-overflow: ellipsis;
     text-align: left;
+    background-color: rgba(0, 0, 0, 0);
   }
 
   .item_img {
@@ -133,6 +111,7 @@
     color: #808080;
     font-weight: normal;
     margin-bottom: 5px;
+    margin-top: 15px;
   }
 
   .item_second_text {
@@ -150,6 +129,66 @@
     font-weight: bold;
     font-size: 16px;
   }
+
+  .time_until_container {
+    text-align: center;
+  }
+
+  .time_until_label_text {
+    // font-family: "jua";
+    font-size: 25px;
+    font-weight: 500;
+    color: #e7bc69;
+  }
+
+  .time_until_text {
+    // font-family: "jua";
+    font-size: 40px;
+    font-weight: 900;
+    color: #e7bc69;
+  }
+
+  .time_duration_container {
+    // font-family: "jua";
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
+  }
+
+  .time_duration_text_container {
+    display: flex;
+    padding: 15px 40px;
+    border-radius: 20px;
+    background-color: #1f2335;
+    margin-top: 15px;
+  }
+
+  .time_duration_day_text {
+    font-size: 40px;
+    font-weight: 900;
+    color: #e7bc69;
+  }
+
+  .time_duration_timer_text {
+    font-size: 40px;
+    color: #e7bc69;
+    font-weight: 900;
+    padding-left: 10px;
+  }
+
+  .item_list_container_warpper {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #f4eddd;
+  }
+
+  .timer_container {
+    width: 100%;
+    max-width: 520px;
+    z-index: 999;
+  }
+
   @media (max-width: 520px){
     /*모바일일때*/  
 
@@ -157,6 +196,40 @@
       width: 100%;
       padding-left: 10px;
       padding-right: 10px;
+    }
+
+    .item_list_container_warpper {
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+
+    .item_first_text {
+      margin-top: 5px;
+    }
+  }
+
+  @media (max-width: 390px){
+    .timer_container {
+      // padding-left: 10px;
+      // padding-right: 10px;
+    }
+  }
+
+  @media (max-width: 365px){
+    .time_until_text {
+      font-size: 30px;
+    }
+
+    .time_duration_day_text {
+      font-size: 30px;
+    }
+
+    .time_duration_timer_text {
+      font-size: 30px;
+    }
+
+    .time_duration_container {
+      margin-top: 40px;
     }
   }
 }
