이벤트 페이지 아이템 정렬 수정

--- a/src/res/css/EventPage.scss
+++ b/src/res/css/EventPage.scss
@@ -80,6 +80,7 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 30px;
+    align-items: flex-start;
   }
 
   .item_container {
