상점 프로세스 상태바 개발 완료

--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -327,6 +327,10 @@
   }
 
   @media (max-width: 520px){
-    /*모바일일때*/  
+    /*모바일일때*/
+    .StoreStateProcess_container {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
   }
 }
