--- a/src/res/css/StoreStateProcess.scss
+++ b/src/res/css/StoreStateProcess.scss
@@ -7,6 +7,13 @@
     margin-right: auto;
   }
 
+  .process_container_wrapper_over_five {
+    width: 80%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .process_container {
     width: 100%;
     display: flex;
@@ -50,6 +57,10 @@
     /*모바일일때*/  
     .process_container_wrapper {
       width: 85%;
+    }
+
+    .process_container_wrapper_over_five {
+      width: 95%;
     }
   }
 
