--- a/src/res/css/StoreHome.scss
+++ b/src/res/css/StoreHome.scss
@@ -103,12 +103,12 @@ $thumb_item_height: 95px;
   .title_img_container {
     display: flex;
     justify-content: center;
-    margin-bottom: 66px;
+    margin-bottom: 35px;
     margin-top: 35px;
   }
 
   .title_img {
-    width: 440px;
+    width: 325px;
   }
 
   .conteint_mobile_full_size {
@@ -147,16 +147,22 @@ $thumb_item_height: 95px;
 
     .title_img_container {
       margin-top: 19px;
-      margin-bottom: 43px;
+      margin-bottom: 19px;
     }
 
     .title_img {
-      width: 100%
+      // width: 100%
     }
 
     .conteint_mobile_full_size {
       padding-left: 0px;
       padding-right: 0px;
+    }
+  }
+
+  @media (max-width: 365px){
+    .title_img {
+      width: 87%
     }
   }
 }
