--- a/src/res/css/StoreManagerTabAccountPage.scss
+++ b/src/res/css/StoreManagerTabAccountPage.scss
@@ -2,6 +2,10 @@
   padding-top: 64px;
   padding-bottom: 64px;
 
+  .box_container {
+    margin-top: 40px;
+  }
+
   .input_label {
     margin-top: 20px;
     margin-bottom: 8px;
@@ -100,13 +104,14 @@
     font-size: 18px;
     font-weight: bold;
     color: #191919;
-    text-align: center;
+    text-align: left;
+    margin-bottom: 20px;
   }
 
   .policy_label {
     opacity: 0.8;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: bold;
   }
 
   .policy_contents {
@@ -114,11 +119,11 @@
     font-weight: 500;
     line-height: 1.8;
     color: #999999;
-    margin-top: 7px;
+    margin-top: 15px;
   }
 
   .policy_container {
-    margin-top: 24px;
+    // margin-top: 24px;
   }
 
   .account_info_container {
@@ -126,11 +131,71 @@
   }
 
   .paid_list_container{
-    margin-top: 32px;
+    // margin-top: 32px;
   }
 
-  .paid_container {
-    margin-top: 64px;
+  // .paid_container {
+  //   margin-top: 64px;
+  // }
+
+  .total_payment_box {
+    width: 100%;
+    height: 143px;
+    border-radius: 12px;
+    box-shadow: 6px 4px 15px 0 rgba(25, 25, 25, 0.05);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .total_payment_container {
+    text-align: center;
+  }
+
+  .total_payment_title {
+    font-size: 14px;
+    color: #acacac;
+  }
+
+  .total_payment_price {
+    font-size: 30px;
+    font-weight: bold;
+    color: #0ec2ff;
+  }
+
+  .second_container {
+    display: flex;
+  }
+
+  .second_box {
+    width: 100%;
+    height: 64px;
+    border-radius: 12px;
+    box-shadow: 6px 4px 15px 0 rgba(25, 25, 25, 0.05);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .second_box_title {
+    font-size: 12px;
+    color: #acacac;
+  }
+
+  .second_box_date {
+    font-size: 16px;
+    font-weight: bold;
+    color: #808080;
+  }
+
+  .second_box_explain {
+    font-size: 12px;
+    color: #acacac;
+    margin-top: 23px;
+
   }
 
   @media (max-width: 520px){
@@ -144,6 +209,14 @@
 
     .paid_container {
       margin-top: 32px;
+    }
+
+    .second_box_date {
+      font-size: 12px;
+    }
+
+    .second_box_explain {
+      margin-top: 11px;
     }
   }
 }
