--- a/src/res/css/StoreAddItemPage.scss
+++ b/src/res/css/StoreAddItemPage.scss
@@ -28,7 +28,7 @@ $img_width: 100px;
   .input_label {
     font-size: 12px;
     color: #000000;
-    margin-top: 20px;
+    // margin-top: 20px;
   }
 
   .input_box{
@@ -194,6 +194,39 @@ $img_width: 100px;
   .ask_play_time_textarea::placeholder {
     font-size: 14px;
     color: #acacac;
+  }
+
+  .input_container {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+  }
+
+  .necessary_dot_box {
+    height: 56px;
+  }
+  .necessary_dot {
+    width: 6px;
+    height: 6px;
+    background-color: #00bfff;
+    border-radius: 50%;
+    margin-left: 6px;
+  }
+
+  .necessary_box {
+    width: 100%;
+    height: 56px;
+    border-radius: 8px;
+    background-color: #f4f4f4;
+    display: flex;
+    align-items: center;
+    padding-left: 16px;
+    margin-bottom: 24px;
+  }
+
+  .necessary_text {
+    margin-left: 8px;
+    font-size: 14px;
   }
 
   @media (max-width: 520px){
