--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -287,6 +287,7 @@ $img_width: 520px;
     font-size: 14px;
     font-weight: bold;
     color: #b3b3b3;
+    background-color: rgba(0, 0, 0, 0);
   }
 
   .refund_container {
@@ -294,6 +295,7 @@ $img_width: 520px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0);
   }
 
   .button_fix_pay {
