--- a/src/res/css/FileUploader.scss
+++ b/src/res/css/FileUploader.scss
@@ -1,3 +1,4 @@
+$box_width: 80px; //FILE_UPLOADER_BOX_WIDTH 사이즈와 동일 해야 합니다.
 .FileUploader {
   
   .file_uploader_container_wrapper {
@@ -11,8 +12,8 @@
   }
 
   .button_container {
-    width: 80px;
-    height: 80px;
+    width: $box_width;
+    height: $box_width;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 10px;
@@ -32,20 +33,28 @@
     margin-right: 8px;
   }
 
+  .preview_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .preview_box {
-    width: 80px;
-    height: 80px;
+    width: $box_width;
+    height: $box_width;
     border-radius: 12px;
     background-color: #f7f7f7;
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    overflow: hidden;
   }
 
   .preview_img { 
-    width: 80px;
-    height: 80px;
+    width: $box_width;
+    // height: 80px;
     border-radius: 12px;
   }
 
