--- a/src/res/css/StoreAddItemPage.scss
+++ b/src/res/css/StoreAddItemPage.scss
@@ -14,6 +14,11 @@ $img_width: 100px;
     margin-bottom: 64px;
   }
 
+  .photo_upload_container {
+    display: flex;
+    align-items: center;
+  }
+
   .box_label {
     font-size: 18px;
     font-weight: bold;
