--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -1,4 +1,5 @@
 $img_width: 520px;
+$font_size: 14px;
 .StoreItemDetailPage {
   // display: flex;
   width: 100%;
@@ -66,6 +67,7 @@ $img_width: 520px;
     // padding-right: 27px;
     margin-top: 20px;
     overflow: hidden;
+    font-size: $font_size;
     // margin-bottom: 64px;
   }
 
@@ -111,9 +113,9 @@ $img_width: 520px;
   }
 
   .content_text {
-    font-size: 14px;
+    // font-size: 14px;
+    font-size: $font_size;
     color: #333333;
-    // margin-bottom: 32px;
   }
 
   .button_pay {
