--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -331,6 +331,7 @@ $font_size: 14px;
     
     .container_label_text {
       font-size: 16px;
+      margin-left: 20px;
     }
 
     .item_detail_page_container {
@@ -376,8 +377,8 @@ $font_size: 14px;
       border-radius: 20px;
       margin-top: 10px;
       // margin-bottom: 0px;
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 20px;
+      padding-right: 20px;
       padding-top: 20px;
       padding-bottom: 11px;
     }
