--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -1,6 +1,7 @@
 .StoreReceiptItem {
   
   .request_content {
+    margin-top: 30px;
     margin-bottom: 14px;
     word-break: break-all;
   }
@@ -21,13 +22,13 @@
     font-size: 14px;
     font-weight: bold;
     color: #00bfff;
-    margin-top: 20px;
+    // margin-top: 20px;
   }
 
   .detail_receipt_button {
     width: 100%;
     height: 48px;
-    margin-top: 5px;
+    // margin-top: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,8 +42,10 @@
   .under_line {
     width: 100%;
     height: 1px;
-    opacity: 0.5;
+    opacity: 1;
     background-color: #f4f4f4;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .state_container{
@@ -55,7 +58,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 30px;
   }
 
   .state_button_refund {
@@ -96,7 +99,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(191, 238, 255, 0.4);
-    margin-top: 16px;
+    margin-top: 20px;
     border-radius: 12px;
   }
 
@@ -180,14 +183,9 @@
 
   .order_refund_reason {
     margin-top: 5px;
+    margin-bottom: 20px;
     font-size: 12px;
     font-weight: 500;
-    color: #7f7f7f;
-  }
-
-  .order_user_name {
-    margin-bottom: 5px;
-    font-weight: bold;
     color: #7f7f7f;
   }
 
@@ -202,6 +200,7 @@
     border: solid 1px #e6e6e6;
     background-color: #ffffff;
     margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .thank_text_area::placeholder {
@@ -252,6 +251,7 @@
 
   .files_container_wrapper {
     margin-top: 20px;
+    margin-bottom: 20px;
   }
 
   .files_container {
@@ -259,11 +259,20 @@
   }
 
   /*대화창*/
-  .product_answer_wrapper {
+  .product_review_container {
     margin-top: 20px;
+  }
+
+  .product_review_box {
+    margin-top: 30px;
+  }
+
+  .product_answer_wrapper {
+    // margin-top: 20px;
   }
   .product_answer_container {
     display: flex;
+    margin-bottom: 20px;
     // margin-top: 40px;
   }
 
@@ -293,7 +302,7 @@
   .receipt_button_container {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 20px;
   }
 
   .receipt_contents_ok_button {
@@ -306,11 +315,13 @@
     font-size: 14px;
     font-weight: bold;
     color: #ffffff; 
+    margin-bottom: 10px;
   }
 
   /*리뷰*/
   .review_container {
     justify-content: flex-end;
+    margin-bottom: 0px;
   }
 
   .review_answer_content_container {
@@ -323,7 +334,58 @@
   }
 
   .StoreStateProcess_container {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+  }
+
+  .price_info_container {
+    margin-top: 20px;
+  }
+
+  .question_container {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 30px;
+  }
+
+  .question_button {
+    font-size: 12px;
+    color: #ACACAC;
+  }
+
+  .order_user_info_container {
+
+  }
+
+  .order_user_info_title {
+    font-size: 14px;
+    font-weight: bold;
+    color: #1A1A1A;
+    margin-bottom: 10px;
+  }
+
+  .order_user_info_label {
+    font-size: 12px;
+    color: #999999;
+    margin-top: 10px;
+  }
+
+  .order_user_info_text {
+    font-size: 12px;
+    color: #333333;
+    margin-top: 4px;
+  }
+
+  .one_to_one_use_info_box {
+    font-size: 14px;
+    border-radius: 12px;
+    color: #03C5FE;
+    background-color: #E4F7FF;
+    text-align: center;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    margin-top: 20px;
+    padding-left: 22px;
+    padding-right: 22px;
   }
 
   @media (max-width: 520px){
