1:1 콘텐츠 개선 작업

--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -200,7 +200,7 @@
     border: solid 1px #e6e6e6;
     background-color: #ffffff;
     margin-top: 20px;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
   }
 
   .thank_text_area::placeholder {
