--- a/src/res/css/StoreReceiptItem.scss
+++ b/src/res/css/StoreReceiptItem.scss
@@ -242,7 +242,8 @@
     font-size: 14px;
     font-weight: bold;
     align-items: center;
-    // margin-right: 10px;
+    max-width: 140px;
+    width: 100%;
   }
 
   .file_label_arrow_img {
