--- a/src/res/css/TableComponent.scss
+++ b/src/res/css/TableComponent.scss
@@ -16,11 +16,16 @@
   .column_title_box {
     width: 100%;
     text-align: center;
+    position: relative;
   }
 
   .column_title {
     font-size: 12px;
     color: #808080;
+    background-color: rgba(0,0,0,0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .row_line_container {
@@ -63,6 +68,27 @@
   .row_bottom_value {
     color: #0ec2ff;
   }
+
+  .infinite-scroll-component {
+    overflow: unset !important;
+  }
+
+  .select_tag {
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+  }
+
+  .sort_mark {
+    width: 7px;
+    height: 4.7px;
+    margin-left: 5px;
+    background-color: #4d4d4d;
+  }
+
   @media (max-width: 520px){
     /*모바일일때*/  
   }
