상품 썸네일 크로핑 기능 추가

--- a/src/res/css/StoreAddItemPage.scss
+++ b/src/res/css/StoreAddItemPage.scss
@@ -167,12 +167,18 @@ $img_width: 100px;
     width: $img_width;
     height: $img_width;
     margin-left: 8px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 20px;
   }
 
   .camera_img {
     width: $img_width;
-    height: $img_width;
-    border-radius: 20px;
+    // height: $img_width;
+    // border-radius: 20px;
   }
 
   .fileUploader{
