--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -40,7 +40,7 @@ $font_size: 14px;
 
   .item_img {
     width: $img_width;
-    height: $img_width;
+    // height: $img_width;
     border-radius: 20px;
     // margin-top: 64px;
   }
@@ -52,8 +52,8 @@ $font_size: 14px;
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 68%, rgba(0, 0, 0, 0.5));
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    // border-bottom-left-radius: 20px;
+    // border-bottom-right-radius: 20px;
   }
 
   .content_container {
@@ -316,6 +316,16 @@ $font_size: 14px;
     color: #ffffff;
     position: fixed;
     bottom: 0;
+  }
+
+  .item_img_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $img_width;
+    height: $img_width;
+    overflow: hidden;
+    border-radius: 20px;
   }
 
   @media (max-width: 520px){
