--- a/src/res/css/StoreItemDetailPage.scss
+++ b/src/res/css/StoreItemDetailPage.scss
@@ -52,8 +52,8 @@ $font_size: 14px;
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 68%, rgba(0, 0, 0, 0.5));
-    // border-bottom-left-radius: 20px;
-    // border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
   }
 
   .content_container {
@@ -318,7 +318,7 @@ $font_size: 14px;
     bottom: 0;
   }
 
-  .item_img_container {
+  .item_img_box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -333,6 +333,20 @@ $font_size: 14px;
     padding-top: 0px;
     padding-bottom: 0px;
     padding-bottom: 24px;
+
+    .item_img_box {
+      width: 100% !important;
+      height: auto !important;
+      border-radius: 0px;
+    }
+
+    .item_img {
+      width: 100% !important;
+      // min-width: 320px;
+      height: auto !important;
+      margin-top: 0px;
+      border-radius: 0px;
+    }
 
     .button_fix_pay {
       width: 100%;
@@ -373,14 +387,6 @@ $font_size: 14px;
 
     .content_text{
       // margin-bottom: 24px;
-    }
-
-    .item_img {
-      width: 100%;
-      // min-width: 320px;
-      height: auto;
-      margin-top: 0px;
-      border-radius: 0px;
     }
 
     .content_container{
