--- a/src/res/css/StoreManagerTabAccountPage.scss
+++ b/src/res/css/StoreManagerTabAccountPage.scss
@@ -187,6 +187,8 @@
   }
 
   .second_box_date {
+    width: 100%;
+    text-align: center;
     font-size: 16px;
     font-weight: bold;
     color: #808080;
