--- a/src/res/css/StoreOrderItem.scss
+++ b/src/res/css/StoreOrderItem.scss
@@ -5,13 +5,17 @@ $item_width: 80px;
 
   .item_img_wrapper {
     width: $item_width;
-    height: $item_width; 
+    height: $item_width;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    overflow: hidden;
+    flex-shrink: 0;
   }
 
   .item_img {
     width: $item_width;
-    height: $item_width;
-    border-radius: 12px;
   }
 
   .item_content_container {
