--- a/src/res/css/StoreManagerTabStoreInfoPage.scss
+++ b/src/res/css/StoreManagerTabStoreInfoPage.scss
@@ -1,11 +1,11 @@
 $button_width: 35px;
 
 .StoreManagerTabStoreInfoPage {
-  padding-top: 32px;
+  padding-top: 64px;
   padding-bottom: 64px;
 
   .input_container {
-    margin-top: 26px;
+    margin-top: 40px;
   }
 
   .input_label {
@@ -43,7 +43,7 @@ $button_width: 35px;
     font-size: 18px;
     font-weight: 500;
     color: #ffffff;
-    margin-top: 20px;
+    margin-top: 40px;
   }
 
   .category_container {
@@ -133,16 +133,112 @@ $button_width: 35px;
   }
 
   .account_info_container {
-    margin-top: 60px;
+    margin-top: 100px;
+  }
+
+  .profile_container {
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .alias_container {
+    display: flex;
+  }
+
+  .alias_front_box {
+    width: 198px;
+    height: 52px;
+    background-color: #fafafa;
+    font-size: 14px;
+    color: #4d4d4d;
+    border: solid 1px #e6e6e6;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 0px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .alias_input_box {
+    border-radius: 0px;
+    border-right: 0px;
+    padding-right: 0px;
+
+    font-size: 14px;
+    font-weight: bold;
+    color: #4d4d4d;
+  }
+
+  .alias_input_box_container {
+    display: flex;
+    width: 100%;
+  }
+
+  .alias_check_box {
+    border: solid 1px #e6e6e6;
+    border-radius: 5px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: 0px;
+    display: flex;
+    padding-right: 12px;
+  }
+
+  .alias_warning_container {
+    font-size: 12px;
+    color: #fc5e7c;
+    margin-top: 12px;
   }
 
   @media (max-width: 520px){
     /*모바일일때*/  
-    padding-top: 0px;
+    
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    .alias_input_box {
+      border-radius: 5px;
+      border: solid 1px #e6e6e6;
+      border-right: 0px;
+      padding-right: 12px;
+    }
+
+    .profile_container {
+      margin-top: 24px;
+    }
 
     .select_box {
-      padding-left: 3px;
-      padding-right: 3px;
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+
+    .alias_container {
+      display: block;
+    }
+
+    .alias_front_box {
+      width: 100%;
+      border: solid 1px #e6e6e6;
+      margin-bottom: 8px;
+      justify-content: left;
+      border-radius: 5px;
+    }
+
+    .input_container {
+      margin-top: 24px;
+    }
+
+    .category_container {
+      margin-top: 5px;
+    }
+
+    .account_info_container {
+      margin-top: 60px;
     }
   }
 }
