--- a/src/res/css/Home_Thumb_Stores_Item.scss
+++ b/src/res/css/Home_Thumb_Stores_Item.scss
@@ -15,6 +15,8 @@ $item_mobile_item_width: 66px;
   width: $item_box_width;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
 
   .item_box {
     width: $item_box_width;
