스토어 홈 개선

--- a/src/res/css/Home_Thumb_Attention_Item.scss
+++ b/src/res/css/Home_Thumb_Attention_Item.scss
@@ -66,6 +66,7 @@ $item_mobile_text_box_width: 108px;
     align-self: flex-start;
 
     margin-top: 24px;
+    text-align: center;
   }
 
   .item_store_item_container {
