--- a/src/res/css/StoreHome.scss
+++ b/src/res/css/StoreHome.scss
@@ -156,6 +156,7 @@ $thumb_item_height: 95px;
   .banner_content_container {
     margin-left: 50px;
     font-size: 20px;
+    text-align: left;
   }
 
   .banner_content_top {
