서치 기능 개발 팝업 스크롤 락 기능 개발

--- a/src/res/css/Home_Thumb_Container_Item.scss
+++ b/src/res/css/Home_Thumb_Container_Item.scss
@@ -42,6 +42,7 @@ $item_mobile_item_width: 230px;
 
   .item_contents_container {
     margin-left: 8px;
+    overflow: hidden;
   }
 
   .item_contents_title {
