메인 캐러셀 개발

--- a/src/res/css/Home_Top_Banner.scss
+++ b/src/res/css/Home_Top_Banner.scss
@@ -20,7 +20,8 @@
 
     display: flex;
     justify-content: center;
-    align-items: center;
+    padding-top: 56px;
+    // align-items: center;
   }
 
   .carousel_item_title_box {
